--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,14 +15,14 @@
             <nav class="navbar navbar-default">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Флэшкарточкер</a>
+                  <%= link_to("Флэшкарточкер",root_path, class: "navbar-brand")  %>  
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="#">Все карточки</a>
+                            <%= link_to("Все карточки",cards_path) %>
                         </li>
                         <li>
                             <a href="#">Добавить карточку</a>
