--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,15 +21,15 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <%= link_to("Все карточки",cards_path) %>
-                        </li>
-                        <li>
-                            <a href="#">Добавить карточку</a>
-                        </li>
+                        <li><%= link_to("Все карточки",cards_path) %></li>
+                        <li><%= link_to("Добавить карточку",new_card_path) %></li>
                     </ul>
                 </div>
             </nav>
+
+            <% if !flash[:notice].blank? %>
+              <p class="bg-success"><%= flash[:notice] %></p>
+            <% end %>
 
             <%= yield %>
         </div>
