--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -17,8 +17,8 @@
             <td><%= card.original %></td>
             <td><%= card.translated %></td>
             <td><%= card.review.strftime('%d-%m-%Y') %></td>
-            <td class="text-center"><%= link_to("Изменить", edit_card_path(card) )  %></td>
-            <td class="text-center"><%= link_to("Удалить", delete_card_path(card) )  %></td>
+            <td class="text-center"><%= link_to 'Изменить', edit_card_path(card)  %></td>
+            <td class="text-center"><%= link_to 'Удалить', card_path(card), method: :delete, data: { confirm: "Вы уверены?" } %></td>
         </tr>
 
         <% end  %>
