--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -2,9 +2,9 @@
 <table class="table table-bordered">
     <thead>
         <tr>
-            <th class="text-center">Оригинал</th>
-            <th class="text-center">Перевод</th>
-            <th class="text-center">Дата пересмотра</th>
+            <th class="text-center align-middle">Оригинал</th>
+            <th class="text-center align-middle">Перевод</th>
+            <th class="text-center align-middle">Дата пересмотра</th>
             <th class="text-center col-md-1"></th>
             <th class="text-center col-md-1"></th>
         </tr>
