--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -3,3 +3,18 @@
         Первый в мире удобный менеджер флеш-карточек. Именно так.
     </p>
 </section>
+
+<% if @card %>
+  <div class="col-md-12">
+       <%= simple_form_for @card, url: check_translation_card_path(@card.id), method: "post" do |f| %>
+
+      <%= f.input :translated, required: false, readonly:  true, label: 'Перевод' %>
+
+      <%= simple_fields_for :other do |o| %>
+        <%= o.input :original_word, as: :string, label: 'Оригинал' %>
+      <% end %>
+
+      <%= f.button :submit, 'Отправить' %>
+      <% end %>
+  </div>
+<% end %>
