--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -2,6 +2,7 @@
    <%= simple_form_for @card do |f| %>
     <%= f.input :original %>
     <%= f.input :translated %>
+    <%= f.file_field :picture %>
     <%= f.button :submit, 'Отправить' %>
   <% end %>
 </div
